--- a/app/views/posts/all_posts.html.erb
+++ b/app/views/posts/all_posts.html.erb
@@ -18,40 +18,36 @@
   </div>
   
   <div>
-    <h3>Bio</h3>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-       Placeat autem illum sequi enim odio accusantium nesciunt eos vero, 
-       quia facilis illo ullam repellendus eaque rerum fuga nam aliquam 
-       tempora quam quo ad nulla ex iste neque. Dolorem iste adipisci deserunt 
-       aperiam fugiat quasi minima accusantium minus? Facere iste ut dignissimos.</p>
-  </div>
-
-  <div>
     <h3>Post #1</h3>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa non, suscipit eveniet ex iste placeat.</p>
     <p>Comments x, Likes: y</p>
   </div>
   <div>
+    <p>Username: Comment 1</p>
+    <p>Username: Comment 2</p>
+    <p>Username: Comment 3</p>
+    <p>Username: Comment 4</p>
+    <p>Username: Comment 5</p>
+  </div>
+  <div>
+    <h3>Post #1</h3>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa non, suscipit eveniet ex iste placeat.</p>
+  </div>
+  <div>
     <h3>Post #2</h3>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa non, suscipit eveniet ex iste placeat.</p>
     <p>Comments x, Likes: y</p>
+    <div>
+      <p>Username: Comment 1</p>
+      <p>Username: Comment 2</p>
+      <p>Username: Comment 3</p>
+      <p>Username: Comment 4</p>
+      <p>Username: Comment 5</p>
+    </div>
   </div>
-  <div>
-    <h3>Post #3</h3>
-
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa non, suscipit eveniet ex iste placeat.</p>
-    <p>Comments x, Likes: y</p>
-  </div>
-  <div>
-    <h3>Post #4</h3>
-
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa non, suscipit eveniet ex iste placeat.</p>
-    <p>Comments x, Likes: y</p>
-  </div>
-
-  <button>See all posts</button>
+  <button>Pagination</button>
   </body>
 </html>
